--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+  <!-- <link rel="icon" type="image/svg+xml" href="/favicon.svg" /> -->
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Vanilla App Template</title>
   <link rel="stylesheet" href="./css/styles.css" />
@@ -12,14 +12,8 @@
 <body>
   <load src="partials/header.html" />
 
-  <section>
-    <h1>Lorem ipsum dolor sit amet.</h1>
-    <!-- Path to images as from index.html file -->
-    <img src="./img/javascript.svg" alt="" />
-  </section>
 
-  <!-- Loads the specified .html file -->
-  <load src="partials/vite-promo.html" />
+
 
   <script type="module" src="./main.js"></script>
 </body>
